sharding-jdbc-config-parent/sharding-jdbc-config-common/src/test/resources/error/default_strategy_error.groovy
package error

defaultStrategy "1"